--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/wangjieyee/game/issues"
   },
-  "homepage": "https://github.com/wangjieyee/game#readme"
+  "homepage": "https://github.com/wangjieyee/game#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0"
+  }
 }
